---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: ???
  Changes:
    - Reverted default settings override of Bob's Adjustable Inserters mod
  Bugfixes:
    - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
    - Fixed multiplayer desync issue
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 06.03.2021
  Changes:
    - Buffed Lead 3
    - Added fuel value to tool tips for burnable fluids
    - Merged in A Sea Block Config mod
    - Added compatibility for MadClown01's Extended AngelBob Minerals
    - Reshuffled early game technology and recipe unlocks
    - Moved Clarifier from Water treatment to Washing 1
    - Removed Water treatment from startup techs
    - Reduced Hydrogen sulfide gas from Viscous mud water washing
    - Reduced lime and time required for Porus lime filters
    - Reduced time required for Sulfur air scrubbing
    - Reduced cost of mud landfill
    - Hid settings from other mods that have no effect with Sea Block
    - Removed bio sicence from Fish refugium 2
    - Set techs Desert farming 1, Swamp farming 1, and Temperate farming 1 to ignore tech cost modifier
    - Hid metal mixing furnaces if multi purpose furnaces are disabled
    - Renamed Metal mixing and Multi purpose furnaces to Recipe furnaces. They are exactly the same as regular furnaces except they need a recipe set
    - Renamed Bob's Assembling machines mod setting Multi purpose furnaces to Recipe furnaces
    - Reduced cost of basic Steel plate smelting from 8 Glowing hot iron plate to 6 Glowing hot iron plate on normal difficulty
    - Increased starting landfill from 1k to 2k
    - Updated crystallization recipe icons
    - Added table of starting tech and items for YAFC to read
    - Added remote interface to allow other mods to modify starting tech and items
    - Added compost voiding recipe