@@ -3,6 +3,7 @@ Version: 0.5.4
 Date: ???
   Changes:
     - Reverted default settings override of Bob's Adjustable Inserters mod
+    - Made Long Inserters ignore tech cost modifier
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
